--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<head>
-    <title>Home | HTML</title>
-    <h1>THIS IS THE PAGE</h1>
-</head>
-
+<html>
+    <head>
+        <title>Home | HTML</title>
+        <h1>THIS IS THE PAGE</h1>
+    </head>
 </html>
