Create Folders images pages
Co-Authored-By: Ray <13406081+raymkindo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Home | HTML</title>
-        <h1>THIS IS THE PAGE</h1>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2>Information Technolodge</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis veritatis aliquid, voluptatibus eveniet corrupti. Dicta consectetur culpa ut eos animi magnam, quisquam quia cum dignissimos, recusandae qui esse consequuntur magni fuga, velit illo. Quisquam recusandae dolorem cumque hic, ipsa molestiae nihil itaque corrupti omnis eos corporis neque ex, nam culpa quas. Illo molestias natus soluta accusantium impedit, deleniti rem non assumenda eaque reiciendis numquam repellendus. Ut voluptates est nam adipisci, voluptatem nostrum possimus quis repellat numquam sed vitae a, voluptatibus architecto ea facere aliquam ad! Repellat, ipsam! Atque a, nesciunt aspernatur nisi quaerat alias sint temporibus totam aliquam quae!
+    </p>
+    <h3>This is the Link Page</h3>
+    <a href="http://127.0.0.1:5500/index.html" target="_blank">Home Page</a> <br>
+    <a href="/pages/about.html">About US</a>
+    <img src="/images/clouds.jpg" alt="Clouds on Summer">
+   
+
+</body>
+
 </html>
